# AV-Bypass-Learning

./: .gitignore  README.md
c++-bypass-av/BasicShellcodeLoader/: BasicShellcodeLoader.cpp  BasicShellcodeLoader.vcxproj  BasicShellcodeLoader.vcxproj.filters
c++-bypass-av/IATShellcodeLoader/: IATShellcodeLoader.cpp  IATShellcodeLoader.vcxproj  IATShellcodeLoader.vcxproj.filters
c++-bypass-av/InterlockedXorShellcodeLoader/: InterlockedXorShellcodeLoader.cpp  InterlockedXorShellcodeLoader.vcxproj  InterlockedXorShellcodeLoader.vcxproj.filters
c++-bypass-av/MACShellcodeLoader/: MACShellcodeLoader.cpp  MACShellcodeLoader.vcxproj  MACShellcodeLoader.vcxproj.filters  ShellcodeToMAC.py
c++-bypass-av/PipeShellcodeLoader01/: PipeShellcodeLoader.cpp  PipeShellcodeLoader.vcxproj  PipeShellcodeLoader.vcxproj.filters
c++-bypass-av/UUIDShellcodeLoader/: UUIDShellcodeLoader.cpp  (+3 more)
go-bypass-av/: base64_encode.go  base64_shellcode_loader.go  basic_shellcode_loader.go
python-bypass-av/: aes_encode.py  aes_shellcode_loader.py  base64_encode.py  base64_shellcode_loader.py  base64_shellcodeloader_decode.py  base64_shellcodeloader_encode.py  basic_shellcode_loader.py  pem_encode.py  pem_shellcode_loader.py  pem_shellcodeloader_decoder.py  pem_shellcodeloader_encode.py  random_variable.py  rc4_encode.py  rc4_shellcode_loader.py  serialize_shellcodeloader.py  unserialize_shellcodeloader.py  xor_encode.py  xor_shellcode_loader.py
rust-bypass-av/aes_cfb_shellcode_loader/aes_cfb_loader/: Cargo.toml
rust-bypass-av/aes_cfb_shellcode_loader/aes_cfb_loader/src/: main.rs
rust-bypass-av/process_injection_loader/: Cargo.toml
rust-bypass-av/process_injection_loader/src/: main.rs
rust-bypass-av/rc4_shellcode_loader/rc4_loader/: Cargo.toml
rust-bypass-av/rc4_shellcode_loader/rc4_loader/src/: main.rs
rust-bypass-av/winapi_shellcode_loader/: Cargo.toml
rust-bypass-av/winapi_shellcode_loader/src/: main.rs
rust-bypass-av/xor_shellcode_loader/xor_loader/: Cargo.toml
rust-bypass-av/xor_shellcode_loader/xor_loader/src/: main.rs
(+43 files in other folders)
