[package]
name = "process_injection_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.0"
winapi = {version="0.3.9",features=["winuser"
,"processthreadsapi","memoryapi","handleapi"]}
