[package]
name = "aes_cfb_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes="0.7.5"
hex="0.4.3"
block-modes="0.8.1"
hex-literal="0.3.3"
winapi = {version="0.3.9",features=["winuser"
,"processthreadsapi","memoryapi","errhandlingapi","synchapi"]}
