[package]
name = "rc4_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto="0.2.36"
hex="0.4.3"
base64="0.13.0"
rustc-serialize = "0.3"
winapi = {version="0.3.9",features=["winuser"
,"processthreadsapi","memoryapi","errhandlingapi","synchapi"]}
