[package]
name = "xor_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
winapi = {version="0.3.9",features=["winuser"
,"processthreadsapi","memoryapi","errhandlingapi","synchapi"]}
